better check the size of the chars table for keymaps. this avoids crashing in #2659. dunno why the keymap is invalid though

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@27183 a95241bf-73f2-0310-859d-f6bbb57e9c96